Contas a pagar / Estoque

--- a/www/home.html
+++ b/www/home.html
@@ -13,30 +13,33 @@
     <link rel="stylesheet" href="components/loader.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/materialize.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="css/material-icon.css" rel="stylesheet">
     
 </head>
 <body>
-    <nav class="nav-extended white">
+   <nav class="nav-extended blue">
         <div class="nav-wrapper container">
-          <a href="#" class="brand-logo"><i class="material-icons large blue-text text-lighten-1">image</i></a>
-          <a href="#" data-target="menu-mobile" class="sidenav-trigger"><i class="material-icons large blue-text text-lighten-1">menu</i></a>
+          <a href="#" class="brand-logo"><i class="material-icons large white-text">image</i></a>
+          <a href="#" data-target="menu-mobile" class="sidenav-trigger"><i class="material-icons large white-text">menu</i></a>
           <ul id="menu-desktop" class="right hide-on-med-and-down">
-            <li><a href="#" class="blue-text text-lighten-1">Venda</a></li>
-            <li><a href="#" class="blue-text text-lighten-1">Estoque</a></li>
-            <li><a href="#" class="blue-text text-lighten-1">Contas a pagar</a></li>
-            <li><a href="#" class="blue-text text-lighten-1">Contas a receber</a></li>
-            <li><a href="#" class="blue-text text-lighten-1">Lucro e gastos</a></li>
+            <li><a href="#" class="white-text">Venda</a></li>
+            <li><a href="estoque.html" class="white-text">Estoque</a></li>
+            <li><a href="contas_a_pagar.html" class="white-text">Contas a pagar</a></li>
+            <li><a href="#" class="white-text">Contas a receber</a></li>
+            <li><a href="#" class="white-text">Lucro e gastos</a></li>
+            <li><a href="index.html" class="red-text"><b>Sair</b></a></li>
           </ul>
         </div>
       </nav>
 
-      <ul class="sidenav white" id="menu-mobile">
-        <li><a class="blue-text text-lighten-1" href="#">Venda <i class="material-icons right blue-text text-lighten-1">keyboard_arrow_right</i></a></li>
-        <li><a class="blue-text text-lighten-1" href="#">Estoque <i class="material-icons right blue-text text-lighten-1">keyboard_arrow_right</i></a></li>
-        <li><a class="blue-text text-lighten-1" href="#">Contas a pagar <i class="material-icons right blue-text text-lighten-1">keyboard_arrow_right</i></a></li>
-        <li><a class="blue-text text-lighten-1" href="#">Contas a receber <i class="material-icons right blue-text text-lighten-1">keyboard_arrow_right</i></a></li>
-        <li><a class="blue-text text-lighten-1" href="#">Lucro e gastos <i class="material-icons right blue-text text-lighten-1">keyboard_arrow_right</i></a></li>
+      <ul class="sidenav blue" id="menu-mobile">
+        <li><a class="white-text" href="#">Venda <i class="material-icons right white-text">keyboard_arrow_right</i></a></li>
+        <li><a class="white-text" href="estoque.html">Estoque <i class="material-icons right white-text">keyboard_arrow_right</i></a></li>
+        <li><a class="white-text" href="contas_a_pagar.html">Contas a pagar <i class="material-icons right white-text">keyboard_arrow_right</i></a></li>
+        <li><a class="white-text" href="#">Contas a receber <i class="material-icons right white-text">keyboard_arrow_right</i></a></li>
+        <li><a class="white-text" href="#">Lucro e gastos <i class="material-icons right white-text">keyboard_arrow_right</i></a></li>
+        <li><a class="red-text" href="index.html"><b>Sair</b></a></li>
       </ul>
+      
 </body>
 </html>
