--- a/www/index.html
+++ b/www/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+<link href="css/material-icon.css" rel="stylesheet"><link href="css/material-icon.css" rel="stylesheet"><link href="css/material-icon.css" rel="stylesheet"><link href="css/material-icon.css" rel="stylesheet"><link href="css/material-icon.css" rel="styleshe<!DOCTYPE HTML>
 <html>
 <head>
   <meta charset="utf-8">
@@ -16,10 +16,10 @@
   <link rel="stylesheet" href="lib/onsenui/css/onsen-css-components.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/materialize.css">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="css/material-icon.css" rel="stylesheet">
 
 </head>
-<body>
+<body style="background-color: whitesmoke;">
   <a class="btn" href="home.html"></a>
 </body>
 </html>
